fix: override Prism's default white-space value to prevent overflow

--- a/src/ui/stella.module.scss
+++ b/src/ui/stella.module.scss
@@ -106,6 +106,10 @@
 
 .pre {
   margin-block: t.$space-2;
+
+  & > code {
+    white-space: pre-wrap !important; /* prism override */
+  }
 }
 
 .hr {
